<resources>
    <string name="app_name">ManagApp</string>
    <string name="splashscreen_message">ManagApp</string>
    <string name="start_page">Let\'s Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="intro_text_description">Hi, this is a app to manage task, its name is ManagApp</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="person_Name">Name</string>
    <string name="signup_image_description">A person looking a task board</string>
    <string name="sign_up_message">Type your name, email and password, to be registered with us!</string>
    <string name="sign_in_message">Type your email and password, to use our app</string>
</resources>